# 7AWSChallenge

./: ,gitignore  .dockerignore  .gitignore  Day1.md  Day2.md  Day3.md  Day4.md  Day5.md  Dockerfile  README.md  day1.md  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: github-actions-demo.yml
app/: app.py
app/static/css/: style.css
app/static/js/: script.js
app/templates/: index.html
nginx/: Dockerfile  default.conf  nginx.conf
