[tool.poetry]
name = "awschallenge"
version = "0.1.0"
description = ""
authors = ["melanylibia <elibialany@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
sqlalchemy = "^2.0.40"
pytelegrambotapi = "^4.26.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
